Doc/force-app/main/default/objects/Case_Deflection__kav/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <label>Attachment</label>
    <type>File</type>
</CustomField>