Doc/force-app/main/default/objects/Case_Deflection__kav/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>CC/RC</fullName>
            </value>
            <value>
                <fullName>C I D</fullName>
            </value>
            <value>
                <fullName>CompliGuard Analyze</fullName>
            </value>
            <value>
                <fullName>CompliGuard Flow</fullName>
            </value>
            <value>
                <fullName>CompliGuard Protect</fullName>
            </value>
            <value>
                <fullName>Conflicts</fullName>
            </value>
            <value>
                <fullName>Contract Express</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>DealCloud</fullName>
            </value>
            <value>
                <fullName>DTE</fullName>
            </value>
            <value>
                <fullName>DTE Axiom</fullName>
            </value>
            <value>
                <fullName>DTE Axiom Mobile</fullName>
            </value>
            <value>
                <fullName>Dun &amp; Bradstreet</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Conflicts</fullName>
            </value>
            <value>
                <fullName>Intapp Conflicts Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Flow</fullName>
            </value>
            <value>
                <fullName>Intapp Flow Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Intake Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Integrate</fullName>
            </value>
            <value>
                <fullName>Intapp Open Conflicts</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience</fullName>
            </value>
            <value>
                <fullName>Intapp Open Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms of Business</fullName>
            </value>
            <value>
                <fullName>Intapp Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>