Doc/force-app/main/default/objects/Case_Deflection__kav/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>