Doc/force-app/main/default/objects/Case_Deflection__kav/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <inlineHelpText>Enter tags separated by semicolon.</inlineHelpText>
    <label>Tags</label>
    <type>TextArea</type>
</CustomField>